// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in multiple transactions 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 74807,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in multiple transactions 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 54634,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in single transaction 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 55001,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in single checkpoint 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 52356,
}
`;

exports[`EthVault - withdraw enter exit queue locks tokens for the time of exit 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 79345,
}
`;

exports[`EthVault - withdraw enter exit queue reduces allowance for sender other than owner 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 80021,
}
`;

exports[`EthVault - withdraw get checkpoint index works with many checkpoints 1`] = `31772`;

exports[`EthVault - withdraw redeem reduces allowance for sender other than owner 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 67483,
}
`;

exports[`EthVault - withdraw redeem transfers assets to receiver 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 66477,
}
`;

exports[`EthVault - withdraw update exit queue adds checkpoint 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 100821,
}
`;

exports[`EthVault - withdraw update exit queue for not all the queued shares 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 105611,
}
`;
